crates/ffi/include/pure_study.h

// One laid-out chapter: the positioned display list a shell paints and
// hit-tests. Opaque to C; produced by [`pure_engine_layout_chapter`], released
// with [`pure_layout_free`].
typedef struct PureDisplayList PureDisplayList;
// The loaded, immutable study core: corpus + Strong's dictionary + the search
// and occurrence indices every lookup rides on. Opaque to C; construct with
// [`pure_engine_open`] / [`pure_engine_open_from_bytes`], release with
// [`pure_engine_free`].
typedef struct PureEngine PureEngine;
// Layout parameters, all in device pixels — the C-ABI mirror of
// `pure_layout::LayoutConfig` (passed by value, so it is `#[repr(C)]`).
typedef struct PureLayoutConfig {
  float width;
  float line_height;
  float space_width;
  float verse_num_gap;
  float para_indent;
  float para_spacing;
  // Nonzero: start every verse on a fresh line (verse-per-line mode).
  uint32_t verse_break;
} PureLayoutConfig;
// Advance-width callback: given the caller's context pointer and a
// NUL-terminated UTF-8 run of text, return its width in device pixels in the
// reader's scripture font. The shell backs this with its native text stack so
// the hit regions this crate computes line up exactly with painted glyphs.
//
// Nullable (`Option<fn>`): a null callback makes layout return null.
//
// # Contract — the callback MUST be total
// It must **not** throw or panic across the boundary and should return a
// **finite, non-negative** width. This crate's [`catch_unwind`] firewall only
// catches *Rust* panics; a foreign exception unwinding out of this callback is
// undefined behaviour — on .NET it fast-fails the process, on JNA it is
// swallowed and reported as `0.0`. A returned `NaN`/negative is clamped to
// `0.0` here (a degraded but safe layout) rather than corrupting line-breaking.
typedef float (*PureMeasureFn)(void *ctx, const char *text);
// Open an engine from an overlay-style home directory containing
// `data/kjv.jsonl` and `data/strongs.json`.
//
// Returns null on failure; if `out_err` is non-null it receives a caller-freed
// error message (and is set to null on success).
//
// # Safety
// `home` is a valid NUL-terminated UTF-8 path; `out_err` is null or a writable
// slot for one `*mut c_char`.
struct PureEngine *pure_engine_open(const char *home, char **out_err);
// Open an engine from in-memory bytes — for shells that bundle the data as
// assets/resources (decision #3): the `kjv.jsonl` text and the `strongs.json`
// object, each as a length-delimited byte buffer (need not be NUL-terminated).
//
// Returns null on failure; `out_err` behaves as in [`pure_engine_open`].
//
// # Safety
// Each `*_ptr`/`*_len` pair describes a readable buffer of that length (a null
// pointer with length 0 is treated as empty and will error); `out_err` is null
// or a writable slot.
struct PureEngine *pure_engine_open_from_bytes(const uint8_t *kjv_ptr,
                                               size_t kjv_len,
                                               const uint8_t *strongs_ptr,
                                               size_t strongs_len,
                                               char **out_err);
// Release an engine. Null is a no-op.
//
// # Safety
// `engine` must be a pointer from `pure_engine_open*` and not already freed.
void pure_engine_free(struct PureEngine *engine);
// Lay out a chapter into a display list, measuring text through `measure`
// (called with `measure_ctx`). Returns an opaque handle to release with
// [`pure_layout_free`], or null on a null engine, a null callback, or an
// unknown/out-of-range book+chapter (no such verses). Because the KJV has no
// empty chapters, a null return reliably means "past the end" — a shell can
// page by advancing until it gets null.
//
// # Safety
// `engine` is valid; `book` is a valid NUL-terminated UTF-8 string; `measure`
// is a valid function pointer for the call and `measure_ctx` is whatever it
// expects (it is passed back verbatim).
struct PureDisplayList *pure_engine_layout_chapter(const struct PureEngine *engine,
                                                   const char *book,
                                                   uint32_t chapter,
                                                   struct PureLayoutConfig cfg,
                                                   PureMeasureFn measure,
                                                   void *measure_ctx);
// Release a display list. Null is a no-op.
//
// # Safety
// `dl` must be a pointer from [`pure_engine_layout_chapter`] and not already
// freed.
void pure_layout_free(struct PureDisplayList *dl);
// The colour palette for a theme (`light`/`dark`/`night`; unknown → light) as
// JSON — every semantic role as a `#rrggbb` hex. Engine-independent. Never null.
//
// # Safety
// `theme` is null or valid NUL-terminated UTF-8 for the call.
char *pure_theme_palette_json(const char *theme);
// The fixed highlight tones (`{tones:[{name,hex}]}`) — the shell's swatch menu.
// Engine-independent. Never null.
char *pure_theme_highlight_tones_json(void);
// Force the lazy analytics indexes (concept engine, leitwort scan, SIF verse
// similarity) to build now — call once on a background thread at startup in
// Full mode so the first study click doesn't stall. Safe to call from any
// thread (the builds are `OnceLock`-guarded) and idempotent. Null on success,
// else an owned error.
//
// # Safety
// `engine` is a live engine (or null → an error string).
char *pure_engine_warm_indexes(const struct PureEngine *engine);
// The in-app guide as panel blocks. Engine-independent (static content). Never
// null.
char *pure_panel_guide_blocks_json(void);
// The About card as panel blocks. Engine-independent (static content). Never
// null.
char *pure_panel_about_blocks_json(void);