crates/ffi/bindings/csharp/PureStudyNative.g.cs


        /// <summary>
        ///  The colour palette for a theme (`light`/`dark`/`night`; unknown → light) as
        ///  JSON — every semantic role as a `#rrggbb` hex. Engine-independent. Never null.
        ///
        ///  # Safety
        ///  `theme` is null or valid NUL-terminated UTF-8 for the call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_theme_palette_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_theme_palette_json(byte* theme);

        /// <summary>
        ///  The fixed highlight tones (`{tones:[{name,hex}]}`) — the shell's swatch menu.
        ///  Engine-independent. Never null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_theme_highlight_tones_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_theme_highlight_tones_json();

        /// <summary>
        ///  Force the lazy analytics indexes (concept engine, leitwort scan, SIF verse
        ///  similarity) to build now — call once on a background thread at startup in
        ///  Full mode so the first study click doesn't stall. Safe to call from any
        ///  thread (the builds are `OnceLock`-guarded) and idempotent. Null on success,
        ///  else an owned error.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → an error string).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_warm_indexes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_warm_indexes(PureEngine* engine);

        /// <summary>
        ///  The in-app guide as panel blocks. Engine-independent (static content). Never
        ///  null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_panel_guide_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_panel_guide_blocks_json();

        /// <summary>
        ///  The About card as panel blocks. Engine-independent (static content). Never
        ///  null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_panel_about_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_panel_about_blocks_json();


    }

    /// <summary>
    ///  The loaded, immutable study core: corpus + Strong's dictionary + the search
    ///  and occurrence indices every lookup rides on. Opaque to C; construct with
    ///  [`pure_engine_open`] / [`pure_engine_open_from_bytes`], release with
    ///  [`pure_engine_free`].
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct PureEngine
    {
    }

    /// <summary>
    ///  One laid-out chapter: the positioned display list a shell paints and
    ///  hit-tests. Opaque to C; produced by [`pure_engine_layout_chapter`], released
    ///  with [`pure_layout_free`].
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct PureDisplayList
    {
    }

    /// <summary>
    ///  Layout parameters, all in device pixels — the C-ABI mirror of
    ///  `pure_layout::LayoutConfig` (passed by value, so it is `#[repr(C)]`).
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct PureLayoutConfig
    {
        public float width;
        public float line_height;
        public float space_width;
        public float verse_num_gap;
        public float para_indent;
        public float para_spacing;
        /// <summary>
        ///  Nonzero: start every verse on a fresh line (verse-per-line mode).
        /// </summary>
        public uint verse_break;
    }



}
